fixed Z-index overlap

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <div class="star"></div>
    <div class="top"></div>
    <!-- christmas board --start -->
-<!-- <div class="board">
+<div class="board">
       <div class="christmastxt">
          <div class="c">C</div>
          <div class="h">H</div>
@@ -88,7 +88,7 @@
          <div class="a">A</div>
          <div class="s">S</div>
       </div>
-      </div> -->
+      </div>
       <!-- christmas board -- end -->
    <div class="middle"></div>
    <div class="ornament o1">
